[UNRELEASED]
Version 0.6.11

- New features:

  * Move download cache (for changelogs and other metadata) to
    $XDG_CONFIG_HOME/aptitude/download.  Thanks to Josh Triplett.
    (Closes: #671780)

- Bug fixes:

  * Load package tags from APT if debtags database is not available.
    (Closes: #501732)

- Internal changes:

  * Access apt-xapian-index directly.  Index path can be configured by
    setting Apt-Xapian-Index::Index in apt.conf(5).

  * Standardize on a single package tags interface.

  * No longer use libept. (Closes: #504153, #677551)

- Documentation:

- Translation updates:

[2014-02-10] Version 0.6.10

Note that 0.6.9 was an experimental release.  Most of the changes it
contained are temporarily reverted, but they will return.

- New features:

  * New sort policy 'installsizechange', for sorting by change in installed size
    of each package when the desired actions are applied (Closes: #676075)

- Bug fixes:

  * Fix segfault and show the correct changelog when executing "aptitude
    changelog <source-package-name>", and no binary packages in that source
    package match the source package name (Closes: #723821)

  * Use new URL to grab changelogs, redirections were set up so it is not
    currently a problem, but the new location seems to be the canonical place
    for metadata (Closes: #708345)

  * Fix incorrect results with some sorting policies (Closes: #720750)

- Internal changes:

  * Change INCLUDES to AM_CPPFLAGS in automake files to avoid warning:
    "'INCLUDES' is the old name for 'AM_CPPFLAGS' (or '*_CPPFLAGS')"

- Documentation:

  * Update manual to refer to canonical git repository.

- Translation updates:

  * Improve and explain some translation messages, thanks helix84@centrum.sk
    (Closes: #537858).


[2014-01-26] Version 0.6.8.4

- New features:

  * Get changelogs also when package origin is from "Debian Backports" and not
    only "Debian", thanks Gerfried Fuchs (Closes: #714619)