@@ -12,6 +12,8 @@ Version 0.6.11
   * Load package tags from APT if debtags database is not available.
     (Closes: #501732)
 
+  * [cmdline]: Use arch-qualified names for virtual packages.
+
 - Internal changes:
 
   * Access apt-xapian-index directly.  Index path can be configured by
